--- a/blueprint/web/index.html
+++ b/blueprint/web/index.html
@@ -32,7 +32,7 @@
  <div class="titlepage">
 <h1>von Neumann Double Commutant Theorem</h1>
 <p class="authors">
-<span class="author">Jon Bannon aJireh Loreaux</span>
+<span class="author">Jon Bannon Jireh Loreaux</span>
 </p>
 </div> 
 </div> <!--main-text -->
