Dependency graph not appearing...

--- a/blueprint/web/dep_graph_document.html
+++ b/blueprint/web/dep_graph_document.html
@@ -72,8 +72,8 @@
       <span class="definition_thmcaption">
       Definition
       </span>
-      <span class="definition_thmlabel">1</span></div>
-    <div class="thm_thmcontent"><p>  The commutant of a set \(S\) of operators is the set of \(T\in B(\mathcal{H})\) such that \(\forall s\in S, Ts=sT\). </p>
+      <span class="definition_thmlabel">1</span><span class="definition_thmtitle">Blah</span></div>
+    <div class="thm_thmcontent"><p>   The commutant of a set \(S\) of operators is the set of \(T\in B(\mathcal{H})\) such that \(\forall s\in S, Ts=sT\). </p>
 </div>
 
     <a class="latex_link" href="index.html#def:commutant">LaTeX</a>
