--- a/blueprint/web/index.html
+++ b/blueprint/web/index.html
@@ -35,12 +35,14 @@
 <span class="author">Jon Bannon Jireh Loreaux</span>
 </p>
 </div>
+
 <div class="definition_thmwrapper theorem-style-definition" id="def:commutant">
   <div class="definition_thmheading">
     <span class="definition_thmcaption">
     Definition
     </span>
     <span class="definition_thmlabel">1</span>
+    <span class="definition_thmtitle">Blah</span>
     <div class="thm_header_extras">
 
         </div>
@@ -72,7 +74,7 @@
         </div>
   </div>
   <div class="definition_thmcontent">
-  <p>  The commutant of a set \(S\) of operators is the set of \(T\in B(\mathcal{H})\) such that \(\forall s\in S, Ts=sT\). </p>
+  <p>   The commutant of a set \(S\) of operators is the set of \(T\in B(\mathcal{H})\) such that \(\forall s\in S, Ts=sT\). </p>
 
   </div>
 </div>
